# LearnC

./: CMakeLists.txt  munit_impl.c  readme.md
Enums/: CMakeLists.txt  color.h  http_code.c  http_codes.h  main.c
Enums/tests/: test_color.c  test_http_codes.c
Pointers/: CMakeLists.txt  array_pointers.c  array_pointers.h  generic_swap.c  generic_swap.h  main.c  swap_integers.c  swap_integers.h  swap_strings.c  swap_strings.h  void_pointers.c  void_pointers.h
Pointers/tests/: test_array_pointers.c  test_generic_swap.c  test_swap_integers.c  test_swap_strings.c  test_void_pointers.c
StackHeap/: CMakeLists.txt  example.c  main.c  malloc.c  malloc.h
StackHeap/tests/: test_malloc.c
Unions/: CMakeLists.txt  main.c  snek_object.c  snek_object.h
Unions/tests/: test_snek_object.c
