add_executable(Pointers
        main.c
        array_pointers.c
        void_pointers.c
        swap_integers.c
        swap_integers.h
        ../munit/munit.c
        tests/test_array_pointers.c
        tests/test_void_pointers.c
        tests/test_swap_integers.c
        swap_strings.c
        swap_strings.h
        tests/test_swap_strings.c
)