add_executable(Pointers
        main.c
        array_pointers.c
        void_pointers.c
        swap_integers.c
        swap_strings.c
        generic_swap.c
        ../munit/munit.c
        tests/test_array_pointers.c
        tests/test_void_pointers.c
        tests/test_swap_integers.c
        tests/test_swap_strings.c
        tests/test_generic_swap.c

)